--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "@types/react-router-dom": "^5.3.3",
     "ajv": "^8.0.0",
     "axios": "^1.6.2",
+    "github-markdown-css": "^5.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
